--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.ProjetoRespiraNet" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/green</item>
+         <item name="colorPrimary">#10B981</item>
 <!--        <item name="navigationIcon">24dp</item>-->
     </style>
 
