--- a/app/src/main/res/layout/graphics_activity.xml
+++ b/app/src/main/res/layout/graphics_activity.xml
@@ -40,16 +40,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="980dp">
 
-                <ListView
-                    android:id="@+id/list_items_devices"
-                    android:layout_width="0dp"
-                    android:layout_height="200dp"
-                    android:layout_marginTop="10dp"
+<!--                <ListView-->
+<!--                    android:id="@+id/list_items_devices"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="200dp"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent">-->
+
+<!--                </ListView>-->
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/menu_seletor_dispositivo"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:hint="Selecione o Dispositivo"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-                </ListView>
+                    <AutoCompleteTextView
+                        android:id="@+id/autoCompleteTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="none" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardViewTemperatura"
@@ -62,7 +81,7 @@
                     app:cardElevation="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/list_items_devices">
+                    app:layout_constraintTop_toBottomOf="@+id/menu_seletor_dispositivo">
 
                     <com.github.mikephil.charting.charts.LineChart
                         android:id="@+id/chartTemp"
@@ -136,8 +155,6 @@
         android:id="@+id/menuBar"
         android:layout_width="409dp"
         android:layout_height="90dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
